--- a/index.html
+++ b/index.html
@@ -1,89 +1,110 @@
 <!doctype html>
 <!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<html lang="en">
 
-    <link rel="author" href="humans.txt" />
-    <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" href="stylesheets/github-dark.css" />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/script.js"></script>
+  <link rel="author" href="humans.txt" />
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen" />
+  <link rel="stylesheet" href="stylesheets/github-dark.css" />
 
-    <title>clzls.GitHub.io</title>
-    <meta name="description" content="a blog test" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <!--[if lt IE 9]>
-      <script src="https://cdn.staticfile.org/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <style>
-        header,nav, section,article,footer
-        {border:1px solid grey; margin:5px; padding:8px;}
-        nav ul {margin:0; padding:0;}
-        nav ul li {display:inline; margin:5px;}
-      </style>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="title">clzls.GitHub.io</h1>
-      </header>
-      <div id="container">
-        <p class="tagline">A blog test</p>
-        <div id="main" role="main">
-          <div class="download-bar">
-            <div class="inner"><a href="https://github.com/clzls" class="code">View clzls.GitHub.io on GitHub</a></div>
-            <span class="blc"></span>
-            <span class="trc"></span>
-          </div>
-          <article class="markdown-body">
-            <h3>
-              <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my GitHub Pages.
-              <!---<a id="catalog" class="anchor" href="catalog.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here is the Catalog.-->
-            </h3>
+  <title>clzls.GitHub.io</title>
+  <meta name="description" content="a blog test" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-            <p>Contents may be written in English, 中文(Chinese), 日本語(Japanese) or sometimes Dansk (Danish).</p>
+  <!--[if lt IE 9]>
+    <script src="https://cdn.staticfile.org/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <style>
+      header,nav, section,article,footer
+      {border:1px solid grey; margin:5px; padding:8px;}
+      nav ul {margin:0; padding:0;}
+      nav ul li {display:inline; margin:5px;}
+    </style>
+  <![endif]-->
+</head>
 
-            <blockquote>
-            <p>Chats via <a href="https://keybase.io/firetimer/chat">Keybase</a> is accepted.</p>
-            <p>Mail: myad#live.cn (REPLACE # WITH @)</p>
-            </blockquote>
+<body>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">clzls.GitHub.io</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">A blog test</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+          <div class="inner"><a href="https://github.com/clzls" class="code">View clzls.GitHub.io on GitHub</a></div>
+          <span class="blc"></span>
+          <span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h3>
+            <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+              <span aria-hidden="true" class="octicon octicon-link"></span>
+            </a>Welcome to my GitHub Pages.
+            <!---<a id="catalog" class="anchor" href="catalog.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here is the Catalog.-->
+          </h3>
 
+          <p>
+            Contents may be written in English, 中文 (Chinese), 日本語 (Japanese) or sometimes Dansk (Danish).
+          </p>
+
+          <blockquote>
             <p>
-            <a href="https://my.flightradar24.com/firetimer"><img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" /></a>
+              Mail: <img alt="myad at live dot cn" src="./rail/img/kinamail.png">
             </p>
+            <p>
+              Chats via <a href="https://keybase.io/firetimer/chat">Keybase</a> is welcomed.
+            </p>
+          </blockquote>
 
-            <h3>
-            <a id="available-contents" class="anchor" href="#available-contents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Available Contents
-            </h3>
+          <h3>
+          <a id="available-contents" class="anchor" href="#available-contents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Available Contents
+          </h3>
 
-            <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">When not declared explicitly, all these documents are licensed under CC BY-NC 4.0<a href="https://creativecommons.org/licenses/by-nc/4.0">
+          <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">
+            When not declared explicitly, all documents below are licensed under CC BY-NC 4.0
+            <a href="https://creativecommons.org/licenses/by-nc/4.0">
               <img style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc_icon.svg" />
-              <img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" />
-              <img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" />
-            </a></p>
-            <p><a href="/rail/tktmach_latest.html">运转大数据 (中国铁路售票机综合统计) (中文 / 日本語 / English)</a></p>
-            <p><a href="/rail/tktMach2022c2.mdx">运转大数据 Mdict 下载 (Chinese)</a> <a href="/rail/tktMach2022c2.ja.mdx">運転マスデータ Mdict (日本語)</a></p>
-          </article>
-        </div>
+              <img style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" />
+              <img style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" />
+            </a>
+          </p>
+          <p lang="zh">
+            <a href="/rail/tktmach_latest.html">运转大数据 (中国铁路售票机综合统计) (中文 / 日本語 / English)</a>
+          </p>
+          <p lang="zh">
+            <a href="/rail/tktMach2022e2.mdx" download>下载：运转大数据 Mdict (中文 Chinese)</a>
+          </p>
+          <p lang="ja">
+            <a href="/rail/tktMach2022e2.ja.mdx" download>ダウンロード：運転マスデータ Mdict (日本語 Japanese)</a>
+          </p>
+
+          <p>
+          <a href="https://my.flightradar24.com/firetimer"><img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" /></a>
+          </p>
+        </article>
       </div>
-      <footer>
-        <div class="owner">
-          <p><a href="https://github.com/clzls" class="avatar"><img src="https://avatars0.githubusercontent.com/u/16474386?v=3&amp;s=60" width="48" height="48" /></a>View <a href="https://github.com/clzls">clzls</a> on <a href="https://www.github.com">GitHub</a></p>
-        </div>
-        <div class="creds">
-          <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br />theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-          <a href="humans.txt"><img src="images/human-alphaC.png" alt="humans.txt" style="width:90px;height:32px" /></a>
-        </div>
-      </footer>
     </div>
-    <div class="current-section">
-      <a href="#top">Scroll to top</a>
-      <p class="name"></p>
-    </div>
-  </body>
+    <footer>
+      <div class="owner">
+        <p><a href="https://github.com/clzls" class="avatar"><img src="https://avatars0.githubusercontent.com/u/16474386?v=3&amp;s=60" width="48" height="48" /></a>View <a href="https://github.com/clzls">clzls</a> on <a href="https://www.github.com">GitHub</a></p>
+      </div>
+      <div class="creds">
+        <small>This page was generated using <a href="https://pages.github.com/">GitHub Pages</a><br />theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a><br />and modified manually</small>
+        <a href="humans.txt"><img src="images/human-alphaC.png" alt="humans.txt" style="width:90px;height:32px" /></a>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <p class="name"></p>
+  </div>
+</body>
+
 </html>
