--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -58,6 +58,16 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-11-14 (v3.7.0)
+          <ul>
+            <li>アウトラインレベルをHTML標準に近づけるように調整。一部のリソースを更新。</li>
+            <li>新しい駅：<var>義烏</var>。</li>
+            <li>ファイル版本番号は <code>2022g</code> にする。</li>
+            <li>本版本以降、ファイル版本番号と小版本（マイナーバージョン）番号は一対一の対応関係から離脱。ご注意下さい。</li>
+            <li>記録した駅組 29 個、駅 654 個、機器 1753 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-10-30 (v3.6.1)
           <ul>
             <li>コードを調整。</li>
