--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -133,6 +133,16 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2022-11-14 (v3.7.0)
+        <ul>
+          <li>调整大纲等级，以贴近 HTML 标准。更新部分依赖资源。</li>
+          <li>新增车站：<var>义乌</var>。</li>
+          <li>更改文件名版本号为<code>2022g</code>。</li>
+          <li>自本版本以后，文件名版本号与小版本号脱离一一对应关系，敬请注意。</li>
+          <li>车站组总数达 29 个，车站总数达 654 个，机器数量达 1753 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2022-10-30 (v3.6.1)
         <ul>
           <li>优化部分代码。</li>
@@ -146,14 +156,6 @@
           <li>新增车站：<var>三原</var>、<var>阎良</var>。</li>
           <li>更改文件名版本号为<code>2022f</code>。</li>
           <li>车站总数达到 639 个，机器数量达到 1736 台。</li>
-        </ul>
-      </li>
-      <li class="list-group-item">
-        …… 2022-08-16(v3.5.0)
-        <ul>
-          <li>生成器：完善厂商名称选择器。</li>
-          <li>新增车站：<var>溧水</var>、<var>宁乡</var>、<var>宜宾西</var>。</li>
-          <li>更改文件名版本号为<code>2022e</code>。</li>
         </ul>
       </li>
       <li class="list-group-item">
