--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,16 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2022-11-14 (v3.7.0)
+        <ul>
+          <li>调整大纲等级，以贴近 HTML 标准。更新部分依赖资源。</li>
+          <li>新增车站：<var>义乌</var>。</li>
+          <li>更改文件名版本号为<code>2022g</code>。</li>
+          <li>自本版本以后，文件名版本号与小版本号脱离一一对应关系，敬请注意。</li>
+          <li>车站组总数达 29 个，车站总数达 654 个，机器数量达 1753 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2022-10-30 (v3.6.1)
         <ul>
           <li>优化部分代码。</li>
