--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,12 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2022-12-12 (v3.7.1)
+        <ul>
+          <li>新增车站：<var>吴圩机场</var>。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2022-11-14 (v3.7.0)
         <ul>
           <li>调整大纲等级，以贴近 HTML 标准。更新部分依赖资源。</li>
