--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -58,6 +58,12 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-12-12 (v3.7.1)
+          <ul>
+            <li>新しい駅：<var>呉圩機場</var>（呉圩空港）。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-11-14 (v3.7.0)
           <ul>
             <li>アウトラインレベルをHTML標準に近づけるように調整。一部のリソースを更新。</li>
@@ -407,7 +413,7 @@
           <li>
             新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜寧</var>、<var>阜寧南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var>
           </li>
-            <li>车站总数达到499个，机器数量1263台。</li>
+            <li>车站总数达到499个，機器数量1263台。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -474,7 +480,7 @@
               新しい駅組：<var>京津城際線(線路)</var>
             </li>
             <li>
-              票机功能信息进行少许调整：可能不支持的功能被忽略
+              票機功能信息进行少许调整：可能不支持的功能被忽略
             </li>
           </ul>
         </li>
@@ -494,7 +500,7 @@
           <ul>
             <li>新しい駅：孝感</li>
             <li>移除了过时的车站联合体。</li>
-            <li>试運転：票机功能信息。以北京西、上海站某些票机为例。</li>
+            <li>试運転：票機功能信息。以北京西、上海站某些票機为例。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -550,7 +556,7 @@
         <li class="list-group-item">
           2021-01-16(v2.1.0):
           <ul>
-            <li>现在机位信息可以带图片了。支持sm.ms图床或本地图片。</li>
+            <li>现在機位信息可以带图片了。支持sm.ms图床或本地图片。</li>
             <li>版式微调，浏览器互动优化。</li>
             <li>车站更名处理：对部分已更名车站的信息进行整理。</li>
             <li>重新对票紙类型进行了编码。</li>
@@ -559,7 +565,7 @@
         <li class="list-group-item">
           2021-01-01(v2.0.0):
           <ul>
-            <li>引入“红改蓝”、“票机号码与终端号不符”标签。</li>
+            <li>引入“红改蓝”、“票機号码与终端号不符”标签。</li>
             <li>版式调整，浏览器互动优化。条目版成为默认项。</li>
             <li>车站基础信息聚合显示。加入少量拼音数据。</li>
             <li>中国語<ruby>拼音<rp>(</rp><rt>ピンイン</rt><rp>)</rp></ruby>情報、ご利用くださいませ。掲載した情報（間違い等）によって引き起こされた（直接的、間接的を問わず）損害に付いて、一切責任を負いません。</li>
