--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -79,7 +79,7 @@
       <tr><td>2</td><td>郑州东</td><td>50</td><td>68</td></tr>
       <tr><td>3</td><td>郑州</td><td>46</td><td>64</td></tr>
       <tr><td>4</td><td>南京南</td><td>46</td><td>53</td></tr>
-      <tr><td>5</td><td>北京南</td><td>39</td><td>44</td></tr>
+      <tr><td>5</td><td>北京南</td><td>42</td><td>49</td></tr>
       <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
       <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
       <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
@@ -133,6 +133,12 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2022-12-12 (v3.7.1)
+        <ul>
+          <li>新增车站：<var>吴圩机场</var>。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2022-11-14 (v3.7.0)
         <ul>
           <li>调整大纲等级，以贴近 HTML 标准。更新部分依赖资源。</li>
@@ -140,22 +146,6 @@
           <li>更改文件名版本号为<code>2022g</code>。</li>
           <li>自本版本以后，文件名版本号与小版本号脱离一一对应关系，敬请注意。</li>
           <li>车站组总数达 29 个，车站总数达 654 个，机器数量达 1753 台。</li>
-        </ul>
-      </li>
-      <li class="list-group-item">
-        2022-10-30 (v3.6.1)
-        <ul>
-          <li>优化部分代码。</li>
-          <li>新增车站：<var>保山</var>、<var>恩施</var>、<var>富源</var>、<var>黄石北</var>、<var>黄石东</var>、<var>陆良</var>、<var>曲靖</var>、<var>曲靖北</var>、<var>巍山</var>、<var>襄阳东</var>、<var>祥云</var>、<var>小湾东</var>、<var>钟祥</var>、<var>遵义</var>。</li>
-        </ul>
-      </li>
-      <li class="list-group-item">
-        2022-10-16 (v3.6.0)
-        <ul>
-          <li>修复部分错误。</li>
-          <li>新增车站：<var>三原</var>、<var>阎良</var>。</li>
-          <li>更改文件名版本号为<code>2022f</code>。</li>
-          <li>车站总数达到 639 个，机器数量达到 1736 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
