--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,12 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2022-12-28 (v3.7.2)
+        <ul>
+          <li>年末年初不再简写年份。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2022-12-12 (v3.7.1)
         <ul>
           <li>新增车站：<var>吴圩机场</var>。</li>
