--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -58,6 +58,12 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-12-28 (v3.7.2)
+          <ul>
+            <li>年末と新年に各暦年は略記せずに示す。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-12-12 (v3.7.1)
           <ul>
             <li>新しい駅：<var>呉圩機場</var>（呉圩空港）。</li>
