--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -47,7 +47,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2022e2.mdx" download><i class="fas fa-download"></i>下载词典 - 2022年10月3日版本</a></p>
+    <p><a href="./tktMach2022g2.mdx" download><i class="fas fa-download"></i>下载词典 - 2022年12月28日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -76,7 +76,7 @@
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
-      <tr><td>2</td><td>郑州东</td><td>50</td><td>68</td></tr>
+      <tr><td>2</td><td>郑州东</td><td>51</td><td>69</td></tr>
       <tr><td>3</td><td>郑州</td><td>46</td><td>64</td></tr>
       <tr><td>4</td><td>南京南</td><td>46</td><td>53</td></tr>
       <tr><td>5</td><td>北京南</td><td>42</td><td>49</td></tr>
@@ -133,6 +133,12 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2022-12-28 (v3.7.2)
+        <ul>
+          <li>年末年初不再简写年份。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2022-12-12 (v3.7.1)
         <ul>
           <li>新增车站：<var>吴圩机场</var>。</li>
