--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,16 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-01-15 (v3.7.3) 新春快乐！
+        <ul>
+          <li>新增记录“标签”功能。</li>
+          <li>调整了部分翻译。</li>
+          <li>新增车站：<var>德清</var>、<var>邓州东</var>、<var>温岭</var>、<var>偃师</var>。</li>
+          <li>更改文件名版本号为<code>2023a</code>。</li>
+          <li>车站组总数达 29 个，车站总数达 659 个，机器数量达 1783 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2022-12-28 (v3.7.2)
         <ul>
           <li>年末年初不再简写年份。</li>
