--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -58,6 +58,16 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-01-15 (v3.7.3) 新年明けましておめでとう！
+          <ul>
+            <li>記録「タグ」を追加</li>
+            <li>一部の翻訳を調整。</li>
+            <li>新しい駅：<var>德清</var>、<var>鄧州東</var>、<var>温岭</var>、<var>偃師</var>。</li>
+            <li>ファイル版本番号は <code>2023a</code> にする。</li>
+            <li>記録した駅組 29 個、駅 659 個、機器 1783 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-12-28 (v3.7.2)
           <ul>
             <li>年末と新年に各暦年は略記せずに示す。</li>
