--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -77,7 +77,7 @@
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
       <tr><td>2</td><td>郑州东</td><td>51</td><td>69</td></tr>
-      <tr><td>3</td><td>郑州</td><td>46</td><td>64</td></tr>
+      <tr><td>3</td><td>郑州</td><td>48</td><td>68</td></tr>
       <tr><td>4</td><td>南京南</td><td>46</td><td>53</td></tr>
       <tr><td>5</td><td>北京南</td><td>42</td><td>49</td></tr>
       <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
@@ -133,19 +133,17 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2022-12-28 (v3.7.2)
+        2023-01-15 (v3.7.3) 新春快乐！
         <ul>
-          <li>年末年初不再简写年份。</li>
+          <li>新增记录“标签”功能。</li>
+          <li>调整了部分翻译。</li>
+          <li>新增车站：<var>德清</var>、<var>邓州东</var>、<var>温岭</var>、<var>偃师</var>。</li>
+          <li>更改文件名版本号为<code>2023a</code>。</li>
+          <li>车站组总数达 29 个，车站总数达 659 个，机器数量达 1783 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
-        2022-12-12 (v3.7.1)
-        <ul>
-          <li>新增车站：<var>吴圩机场</var>。</li>
-        </ul>
-      </li>
-      <li class="list-group-item">
-        2022-11-14 (v3.7.0)
+        …… 2022-11-14 (v3.7.0)
         <ul>
           <li>调整大纲等级，以贴近 HTML 标准。更新部分依赖资源。</li>
           <li>新增车站：<var>义乌</var>。</li>
