--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,16 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-02-01 (v3.7.4)
+        <ul>
+          <li>取消中文版本中的日语假名标注等，请移步日语版本。</li>
+          <li>部分优化了链接功能。</li>
+          <li>调整了部分翻译。</li>
+          <li>因车补票全面电子化，即日起车补票页面冻结，不再更新。</li>
+          <li>新增车站：<var>蚌埠南</var>、<var>常州北</var>、<var>观音机场</var>、<var>三门峡</var>、<var>三门峡西</var>、<var>元谋西</var>、<var>枣庄</var>、<var>枣庄西</var>。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-01-15 (v3.7.3) 新春快乐！
         <ul>
           <li>新增记录“标签”功能。</li>
