--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="./tktGener.html">ジェネレータ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./tktAbout.html">アバウト</a>
+        <a class="nav-link" href="./tktAbout.html">使い方</a>
       </li>
     </ul>
   </nav>
@@ -58,6 +58,16 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-02-01 (v3.7.4)
+          <ul>
+            <li>中国語版に振り仮名等を抜く。日本語版にご利用ください。</li>
+            <li>一部のリンク機能を調整。</li>
+            <li>一部の翻訳を調整。</li>
+            <li>因车补票全面电子化，即日起车补票页面冻结，不再更新。</li>
+            <li>新しい駅：<var>蚌埠南</var>、<var>常州北</var>、<var>観音機場</var>（徐州観音空港）、<var>三門峡</var>、<var>三門峡西</var>、<var>元谋西</var>、<var>棗庄</var>、<var>棗庄西</var>。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-01-15 (v3.7.3) 新年明けましておめでとう！
           <ul>
             <li>記録「タグ」を追加</li>
@@ -76,7 +86,7 @@
         <li class="list-group-item">
           2022-12-12 (v3.7.1)
           <ul>
-            <li>新しい駅：<var>呉圩機場</var>（呉圩空港）。</li>
+            <li>新しい駅：<var>呉圩機場</var>（南寧呉圩空港）。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -429,7 +439,7 @@
           <li>
             新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜寧</var>、<var>阜寧南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var>
           </li>
-            <li>车站总数达到499个，機器数量1263台。</li>
+            <li>記録した駅は499個、機器は1263個。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -460,7 +470,7 @@
           2021-04-19(v2.3.5)
           <ul>
             <li>
-              新しい駅：<var>河源</var>、<var>虎门</var>、<var>淮北</var>、<var>漳浦</var>
+              新しい駅：<var>河源</var>、<var>虎門</var>、<var>淮北</var>、<var>漳浦</var>
             </li>
             <li>
               新しい駅組：<var>衢寧線(線路)</var>
@@ -504,7 +514,7 @@
           2021-03-22(v2.3.1)
           <ul>
             <li>
-              新しい駅：昌平北、大理、峨眉、峨眉山、淮安東、康庄、連云港東、密云北、石门県北、顺义西、燕岗
+              新しい駅：昌平北、大理、峨眉、峨眉山、淮安東、康庄、連云港東、密云北、石門県北、顺义西、燕岗
             </li>
             <li>
               修正：鄭焦城際の表示の不具合
