--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -76,10 +76,10 @@
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
-      <tr><td>2</td><td>郑州东</td><td>51</td><td>69</td></tr>
-      <tr><td>3</td><td>郑州</td><td>48</td><td>68</td></tr>
-      <tr><td>4</td><td>南京南</td><td>46</td><td>53</td></tr>
-      <tr><td>5</td><td>北京南</td><td>42</td><td>49</td></tr>
+      <tr><td>2</td><td>郑州东</td><td>51</td><td>68</td></tr>
+      <tr><td>3</td><td>郑州</td><td>49</td><td>69</td></tr>
+      <tr><td>4</td><td>南京南</td><td>46</td><td>54</td></tr>
+      <tr><td>5</td><td>北京南</td><td>44</td><td>51</td></tr>
       <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
       <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
       <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
@@ -133,13 +133,13 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-01-15 (v3.7.3) 新春快乐！
+        2023-02-01 (v3.7.4)
         <ul>
-          <li>新增记录“标签”功能。</li>
+          <li>取消中文版本中的日语假名标注等，请移步日语版本。</li>
+          <li>部分优化了链接功能。</li>
           <li>调整了部分翻译。</li>
-          <li>新增车站：<var>德清</var>、<var>邓州东</var>、<var>温岭</var>、<var>偃师</var>。</li>
-          <li>更改文件名版本号为<code>2023a</code>。</li>
-          <li>车站组总数达 29 个，车站总数达 659 个，机器数量达 1783 台。</li>
+          <li>因车补票全面电子化，即日起车补票页面冻结，不再更新。</li>
+          <li>新增车站：<var>蚌埠南</var>、<var>常州北</var>、<var>观音机场</var>、<var>三门峡</var>、<var>三门峡西</var>、<var>元谋西</var>、<var>枣庄</var>、<var>枣庄西</var>。</li>
         </ul>
       </li>
       <li class="list-group-item">
