--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-02-17 (v3.7.5)
+        <ul>
+          <li>更新了生成器。</li>
+          <li>新增车站：<var>高碑店东</var>、<var>红旗渠</var>、<var>燕郊</var>。</li>
+          <li>车站组总数达 29 个，车站总数达 670 个，机器数量达 1837 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-02-01 (v3.7.4)
         <ul>
           <li>取消中文版本中的日语假名标注等，请移步日语版本。</li>
