--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="./tktmach_latest.html">返る</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./tktGener.html">ジェネレータ</a>
+        <a class="nav-link" href="./tktGener.html">収集表</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./tktAbout.html">使い方</a>
@@ -58,13 +58,21 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-02-17 (v3.7.5)
+          <ul>
+            <li>収集表を更新。</li>
+            <li>新しい駅：<var>高碑店東</var>、<var>紅旗渠</var>、<var>燕郊</var>。</li>
+            <li>記録した駅組 29 個、駅 670 個、機器 1837 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-02-01 (v3.7.4)
           <ul>
             <li>中国語版に振り仮名等を抜く。日本語版にご利用ください。</li>
             <li>一部のリンク機能を調整。</li>
             <li>一部の翻訳を調整。</li>
             <li>因车补票全面电子化，即日起车补票页面冻结，不再更新。</li>
-            <li>新しい駅：<var>蚌埠南</var>、<var>常州北</var>、<var>観音機場</var>（徐州観音空港）、<var>三門峡</var>、<var>三門峡西</var>、<var>元谋西</var>、<var>棗庄</var>、<var>棗庄西</var>。</li>
+            <li>新しい駅：<var>蚌埠南</var>、<var>常州北</var>、<var>観音機場</var>（徐州観音空港）、<var>三門峡</var>、<var>三門峡西</var>、<var>元謀西</var>、<var>棗庄</var>、<var>棗庄西</var>。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -279,7 +287,7 @@
           2021-10-24(v3.1.1) 1024 Programmers' Day!
           <ul>
             <li>貢献統計の方法を更新。</li>
-            <li>「红票特辑」統計の方法を更新。</li>
+            <li>「赤切符特輯」統計の方法を更新。</li>
             <li>事件発生時間の「ぼんやりと説明」機能を実装。</li>
             <li>自動転写と翻訳を更新。</li>
             <li>新しい駅：<var>威海北</var></li>
@@ -591,7 +599,7 @@
         <li class="list-group-item">
           2021-01-01(v2.0.0):
           <ul>
-            <li>引入“红改蓝”、“票機号码与终端号不符”标签。</li>
+            <li>引入“紅改蓝”、“票機号码与终端号不符”标签。</li>
             <li>版式调整，浏览器互动优化。条目版成为默认项。</li>
             <li>车站基础信息聚合显示。加入少量拼音数据。</li>
             <li>中国語<ruby>拼音<rp>(</rp><rt>ピンイン</rt><rp>)</rp></ruby>情報、ご利用くださいませ。掲載した情報（間違い等）によって引き起こされた（直接的、間接的を問わず）損害に付いて、一切責任を負いません。</li>
