--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -76,15 +76,15 @@
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
-      <tr><td>2</td><td>郑州东</td><td>51</td><td>68</td></tr>
-      <tr><td>3</td><td>郑州</td><td>49</td><td>69</td></tr>
-      <tr><td>4</td><td>南京南</td><td>46</td><td>54</td></tr>
-      <tr><td>5</td><td>北京南</td><td>44</td><td>51</td></tr>
+      <tr><td>2</td><td>郑州东</td><td>51</td><td>70</td></tr>
+      <tr><td>3</td><td>郑州</td><td>50</td><td>70</td></tr>
+      <tr><td>4</td><td>南京南</td><td>46</td><td>55</td></tr>
+      <tr><td>5</td><td>北京南</td><td>45</td><td>52</td></tr>
       <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
       <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
       <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
       <tr><td>9</td><td>福州</td><td>27</td><td>34</td></tr>
-      <tr><td>10</td><td>南京</td><td>23</td><td>27</td></tr>
+      <tr><td>10</td><td>北京西</td><td>23</td><td>30</td></tr>
     </table>
   </div>
   <div class="container my-3">
@@ -133,13 +133,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-02-01 (v3.7.4)
+        2023-02-17 (v3.7.5)
         <ul>
-          <li>取消中文版本中的日语假名标注等，请移步日语版本。</li>
-          <li>部分优化了链接功能。</li>
-          <li>调整了部分翻译。</li>
-          <li>因车补票全面电子化，即日起车补票页面冻结，不再更新。</li>
-          <li>新增车站：<var>蚌埠南</var>、<var>常州北</var>、<var>观音机场</var>、<var>三门峡</var>、<var>三门峡西</var>、<var>元谋西</var>、<var>枣庄</var>、<var>枣庄西</var>。</li>
+          <li>更新了生成器。</li>
+          <li>新增车站：<var>高碑店东</var>、<var>红旗渠</var>、<var>燕郊</var>。</li>
+          <li>车站组总数达 29 个，车站总数达 670 个，机器数量达 1837 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
