--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -66,6 +66,7 @@
       <li class="list-group-item list-group-item-info">首次填写前请阅读帮助页面，并与管理员取得联系，向管理员提交用户名注册申请。不被认可的用户名可能被要求修改或者以“热心网友”替代。</li>
       <li class="list-group-item">现在表格具有自动填写机器名的功能，填写时请按照先上后下的顺序。需要手动触发填写时，可以清空机器名一栏。</li>
       <li class="list-group-item list-group-item-info">据悉，原则上 2022-04-20 以来打印之报销凭证不再在票号后提示售票站名。自北京时间 2022-04-20 00:00 始至 另有通知 止，所有车票均应标注票号后注（如有），如“福州售”“北京西”“JM”。留空则自动提示为无附注。</li>
+      <li class="list-group-item">关于无法打印报销凭证的机器。如果可以打印信息单，则应采用信息单下方“出单地点”或“出单”处显示的十位数字作为“票号前十位”，并在备注中注明。</li>
     </ol>
     <form class="was-validated" action="javascript:sub2()" onchange="sub()">
       <div class="form-group">
@@ -109,11 +110,6 @@
           </div>
         </div>
 
-      </div>
-      <div class="form-check-inline">
-        <label class="form-check-label">
-          <input type="checkbox" class="form-check-input" id="sel_ad">有票面广告
-        </label>
       </div>
       <div class="form-check-inline">
         <label class="form-check-label">
@@ -193,10 +189,20 @@
           <div class="input-group-text">
             <input type="checkbox" aria-label="是否显示车票票号后的提示，复选框" id="descSel_pmbz">
           </div>
-          <span class="input-group-text">票号后注</span>
+          <span class="input-group-text">票号后注有：</span>
         </div>
-        <input type="text" class="form-control" id="descSelTxt_pmbz" aria-label="请输入车票票号后的提示" placeholder="例如：武A"
+        <input type="text" class="form-control" id="descSelTxt_pmbz" aria-label="请输入车票票号后的提示" placeholder="例如：JM"
           title="请输入车票票号后的提示。">
+      </div>
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <div class="input-group-text">
+            <input type="checkbox" aria-label="车票是否含有广告，复选框" id="selAd">
+          </div>
+          <span class="input-group-text">有票面广告，内容为：</span>
+        </div>
+        <input type="text" class="form-control" id="selAdTxt" aria-label="请输入车票广告" placeholder="例如：广告位招商"
+          title="请输入车票广告。">
       </div>
       <div class="form-group">
         <small class="text-muted">据悉，原则上 2022-04-20 以来打印之报销凭证不再在票号后提示售票站名。 自北京时间 2022-04-20 00:00 始至 另有通知 止，所有车票均应标注票号后注（如有），如“福州售”“北京西”“JM”。留空则自动提示为无附注。</small>
