--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -58,6 +58,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-03-03 (v3.7.6)
+          <ul>
+            <li>収集表を更新。</li>
+            <li>新しい駅：<var>句容西</var>、<var>天津南</var>、<var>西平西</var>、<var>棗庄東</var>。</li>
+            <li>記録した駅組 29 個、駅 674 個、機器 1857 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-02-17 (v3.7.5)
           <ul>
             <li>収集表を更新。</li>
