--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-03-03 (v3.7.6)
+        <ul>
+          <li>更新了生成器。</li>
+          <li>新增车站：<var>句容西</var>、<var>天津南</var>、<var>西平西</var>、<var>枣庄东</var>。</li>
+          <li>车站组总数达 29 个，车站总数达 674 个，机器数量达 1857 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-02-17 (v3.7.5)
         <ul>
           <li>更新了生成器。</li>
