--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -47,7 +47,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2022g2.mdx" download><i class="fas fa-download"></i>下载词典 - 2022年12月28日版本</a></p>
+    <p><a href="./tktMach2023a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 3 月 3 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -78,13 +78,13 @@
       <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
       <tr><td>2</td><td>郑州东</td><td>51</td><td>70</td></tr>
       <tr><td>3</td><td>郑州</td><td>50</td><td>70</td></tr>
-      <tr><td>4</td><td>南京南</td><td>46</td><td>55</td></tr>
-      <tr><td>5</td><td>北京南</td><td>45</td><td>52</td></tr>
+      <tr><td>4</td><td>南京南</td><td>49</td><td>59</td></tr>
+      <tr><td>5</td><td>北京南</td><td>45</td><td>53</td></tr>
       <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
       <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
       <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
       <tr><td>9</td><td>福州</td><td>27</td><td>34</td></tr>
-      <tr><td>10</td><td>北京西</td><td>23</td><td>30</td></tr>
+      <tr><td>10</td><td>北京西</td><td>24</td><td>32</td></tr>
     </table>
   </div>
   <div class="container my-3">
@@ -133,11 +133,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-02-17 (v3.7.5)
+        2023-03-03 (v3.7.6)
         <ul>
           <li>更新了生成器。</li>
-          <li>新增车站：<var>高碑店东</var>、<var>红旗渠</var>、<var>燕郊</var>。</li>
-          <li>车站组总数达 29 个，车站总数达 670 个，机器数量达 1837 台。</li>
+          <li>新增车站：<var>句容西</var>、<var>天津南</var>、<var>西平西</var>、<var>枣庄东</var>。</li>
+          <li>车站组总数达 29 个，车站总数达 674 个，机器数量达 1857 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
