--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,15 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-03-18 (v3.7.7)
+        <ul>
+          <li>修改拼音排序方式。</li>
+          <li>新增车站：<var>包头东</var>、<var>滁州北</var>、<var>集宁南</var>、<var>全椒</var>、<var>通州西</var>、<var>乌兰察布</var>。</li>
+          <li>移除车站：<var>包头</var>。</li>
+          <li>车站组总数达 29 个，车站总数达 679 个，机器数量达 1886 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-03-03 (v3.7.6)
         <ul>
           <li>更新了生成器。</li>
