--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -58,6 +58,15 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-03-18 (v3.7.7)
+          <ul>
+            <li>拼音排列方を変更。</li>
+            <li>新しい駅：<var>包頭東</var>、<var>滁州北</var>、<var>集宁南</var>、<var>全椒</var>、<var>通州西</var>、<var>烏蘭察布</var>。</li>
+            <li>消した駅：<var>包頭</var>。</li>
+            <li>記録した駅組 29 個、駅 679 個、機器 1886 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-03-03 (v3.7.6)
           <ul>
             <li>収集表を更新。</li>
