--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -79,12 +79,12 @@
       <tr><td>2</td><td>郑州东</td><td>51</td><td>70</td></tr>
       <tr><td>3</td><td>郑州</td><td>50</td><td>70</td></tr>
       <tr><td>4</td><td>南京南</td><td>49</td><td>59</td></tr>
-      <tr><td>5</td><td>北京南</td><td>45</td><td>53</td></tr>
+      <tr><td>5</td><td>北京南</td><td>46</td><td>54</td></tr>
       <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
       <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
       <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
-      <tr><td>9</td><td>福州</td><td>27</td><td>34</td></tr>
-      <tr><td>10</td><td>北京西</td><td>24</td><td>32</td></tr>
+      <tr><td>9</td><td>北京西</td><td>27</td><td>35</td></tr>
+      <tr><td>10</td><td>福州</td><td>27</td><td>34</td></tr>
     </table>
   </div>
   <div class="container my-3">
@@ -133,11 +133,12 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-03-03 (v3.7.6)
+        2023-03-18 (v3.7.7)
         <ul>
-          <li>更新了生成器。</li>
-          <li>新增车站：<var>句容西</var>、<var>天津南</var>、<var>西平西</var>、<var>枣庄东</var>。</li>
-          <li>车站组总数达 29 个，车站总数达 674 个，机器数量达 1857 台。</li>
+          <li>修改拼音排序方式。</li>
+          <li>新增车站：<var>包头东</var>、<var>滁州北</var>、<var>集宁南</var>、<var>全椒</var>、<var>通州西</var>、<var>乌兰察布</var>。</li>
+          <li>移除车站：<var>包头</var>。</li>
+          <li>车站组总数达 29 个，车站总数达 679 个，机器数量达 1886 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
