--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-04-02 (v3.7.8)
+        <ul>
+          <li>修改部分功能名称。</li>
+          <li>新增车站：<var>八方山</var>、<var>莒南</var>、<var>临沂东</var>、<var>清河城</var>、<var>托克托东</var>。</li>
+          <li>车站组总数达 29 个，车站总数达 684 个，机器数量达 1918 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-03-18 (v3.7.7)
         <ul>
           <li>修改拼音排序方式。</li>
