--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -58,6 +58,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-04-02 (v3.7.8)
+          <ul>
+            <li>一部の「端末機能」名を調整。</li>
+            <li>新しい駅：<var>八方山</var>、<var>莒南</var>、<var>臨沂東</var>、<var>清河城</var>、<var>托克托東</var>。</li>
+            <li>記録した駅組 29 個、駅 684 個、機器 1918 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-03-18 (v3.7.7)
           <ul>
             <li>拼音排列方を変更。</li>
