--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -77,13 +77,13 @@
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>长春</td><td>54</td><td>65</td></tr>
       <tr><td>2</td><td>郑州东</td><td>51</td><td>70</td></tr>
-      <tr><td>3</td><td>郑州</td><td>50</td><td>70</td></tr>
-      <tr><td>4</td><td>南京南</td><td>49</td><td>59</td></tr>
+      <tr><td>3</td><td>南京南</td><td>51</td><td>61</td></tr>
+      <tr><td>4</td><td>郑州</td><td>50</td><td>72</td></tr>
       <tr><td>5</td><td>北京南</td><td>46</td><td>54</td></tr>
-      <tr><td>6</td><td>杭州东</td><td>33</td><td>39</td></tr>
+      <tr><td>6</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
-      <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
-      <tr><td>9</td><td>北京西</td><td>27</td><td>35</td></tr>
+      <tr><td>8</td><td>北京西</td><td>30</td><td>39</td></tr>
+      <tr><td>9</td><td>兰州西</td><td>27</td><td>35</td></tr>
       <tr><td>10</td><td>福州</td><td>27</td><td>34</td></tr>
     </table>
   </div>
@@ -133,12 +133,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-03-18 (v3.7.7)
+        2023-04-02 (v3.7.8)
         <ul>
-          <li>修改拼音排序方式。</li>
-          <li>新增车站：<var>包头东</var>、<var>滁州北</var>、<var>集宁南</var>、<var>全椒</var>、<var>通州西</var>、<var>乌兰察布</var>。</li>
-          <li>移除车站：<var>包头</var>。</li>
-          <li>车站组总数达 29 个，车站总数达 679 个，机器数量达 1886 台。</li>
+          <li>修改部分功能名称。</li>
+          <li>新增车站：<var>八方山</var>、<var>莒南</var>、<var>临沂东</var>、<var>清河城</var>、<var>托克托东</var>。</li>
+          <li>车站组总数达 29 个，车站总数达 684 个，机器数量达 1918 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
