--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -67,6 +67,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-04-15 (v3.7.9)
+        <ul>
+          <li>新增车站：<var>霸州西</var>、<var>白洋淀</var>、<var>东海县</var>、<var>廊坊</var>、<var>南翔北</var>、<var>武汉东</var>、<var>新沂</var>、<var>雄安</var>。</li>
+          <li>车站组总数达 29 个，车站总数达 692 个，机器数量达 1944 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-04-02 (v3.7.8)
         <ul>
           <li>修改部分功能名称。</li>
