--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -58,6 +58,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2023-04-15 (v3.7.9)
+          <ul>
+            <li>新しい駅：<var>霸州西</var>、<var>白洋淀</var>、<var>東海県</var>、<var>廊坊</var>、<var>南翔北</var>、<var>武漢東</var>、<var>新沂</var>、<var>雄安</var>。</li>
+            <li>記録した駅組 29 個、駅 692 個、機器 1944 個。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2023-04-02 (v3.7.8)
           <ul>
             <li>一部の「端末機能」名を調整。</li>
